# warp_square_engine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: java.yml
examples/: simple.rs
java/: .gitignore  Cargo.toml  build.rs  settings.gradle
java/lib/: build.gradle
java/lib/src/main/java/club/gamza/warp_square/engine/: Foo.java  InternalPointerMarker.java  JNIReachabilityFence.java
java/lib/src/main/java/club/gamza/warpsquare/engine/: BitBoard.java  Color.java  File.java  Foo.java  Game.java  InternalPointerMarker.java  JNIReachabilityFence.java  Level.java  NativeUtils.java  Piece.java  PieceMove.java  PieceType.java  Rank.java  Square.java
java/lib/src/test/java/club/gamza/warp_square/engine/: LibraryTest.java
java/lib/src/test/java/club/gamza/warpsquare/engine/: LibraryTest.java
java/src/: java_glue.in.rs  java_glue.rs.in
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
src/: bit_board.rs  board.rs  board_set.rs  color_mask.rs  game.rs  lib.rs  piece.rs  piece_move.rs  square.rs
