[package]
name = "java"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "engine_java"
crate-type = ["cdylib"]

[dependencies]
warp_square_engine = {path = "../"}
log = "0.4.20"

[build-dependencies]
flapigen = "0.6.0-pre7"
bindgen = { version = "0.68.1", default-features = false}
