[package]
name = "python"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "warp_square_engine"
crate-type = ["cdylib"]

[dependencies]
warp_square_engine = {path = "../"}
pyo3 = "0.19.0"
